syntax = "proto3";

package intro.hw.v1;

option go_package = "github.com/zerospiel/proto_workshop/intro/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply);
    // rpc ClientStreamsHello(stream HelloRequest) returns (HelloReply);
    // rpc ServerStreamsHello(HelloRequest) returns (stream HelloReply);
    // rpc FullDuplexStreamHello(stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message DoNotUseExample {
    fixed64 some_int = 1;
    reserved 2;
    reserved "existed_field_name";
    map<int32, string> some_map = 65536;  // number unequivocally identifies field in the binary encoded data
}